kubernetes_model_to_text/output/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: uml
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 2dv50e.xyz
    http:
      paths:
      - path: /asd
        pathType: Prefix
        backend:
          service:
            name: mongoexpress
            port:
              number: 80
